poke/testsuite/poke.pkl/sl-diag-1.pk
/* { dg-do compile } */

defvar i = 1 <<. (31 + 1); /* { dg-error "too big" } */
